Bug 435263 - Kdenlive - Missing drop down menu for clips from Automatic Scene Split after reopening project
Summary: Kdenlive - Missing drop down menu for clips from Automatic Scene Split after ...
Status: RESOLVED FIXED
Alias: None
Product: kdenlive
Classification: Applications
Component: User Interface & Miscellaneous (other bugs)
Version First Reported In: 20.12.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Jean-Baptiste Mardelle
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-04-02 13:01 UTC by ada
Modified: 2021-04-02 18:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screen shot showing the missing drop down menu on a clip after closing and reopening the project. (377.78 KB, image/png)
2021-04-02 13:01 UTC, ada
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ada 2021-04-02 13:01:34 UTC
Created attachment 137269 [details]
Screen shot showing the missing drop down menu on a clip after closing and reopening the project.

SUMMARY
The drop down menu with the cut clips from Automatic Scene Split is missing after closing and ere-opening the project.

STEPS TO REPRODUCE
1. On a video file with cuts in it use the "Automatic Scene-split" feature & cut clips setting.
2. Save project and close.
3. Open project again. The drop-down menu with all the cut clips is missing.

OBSERVED RESULT
The drop-down menu with all the cut clips is missing after closing and re-opening project.

EXPECTED RESULT
The drop-down menu with all the cut clips is present after closing and re-opening project. The markers are still visible in the preview monitor and on the time-line, just not the clip menu.

SOFTWARE/OS VERSIONS
Linux: Ubuntu Studio 20.10
KDE Plasma Version: 5.19.5
KDE Frameworks Version: 5.74.0
Qt Version: 5.14.2

ADDITIONAL INFORMATION
Kernel version: 5.8.0-48-lowlatency
Comment 1 Julius Künzel 2021-04-02 14:41:20 UTC
Thanks for your report! What you mean is not a "drop down" menu but subclips / clip zones inside the treeview. However I can confirm they are lost after a re-opening. The problem seems to be limited to auto-generated zones with the split scene tool. If you create zones manually they are remembered.
Comment 2 Julius Künzel 2021-04-02 18:49:50 UTC
Git commit 0a2910ef4351c3038ba229982f6a6b9e13a8b0ec by Julius Künzel.
Committed on 02/04/2021 at 18:47.
Pushed by jlskuz into branch 'release/21.04'.

Automatic Scene Split: apply zones correctly

M  +3    -2    src/jobs/scenesplitjob.cpp

https://invent.kde.org/multimedia/kdenlive/commit/0a2910ef4351c3038ba229982f6a6b9e13a8b0ec