Automatic Scene Split: apply zones correctly

BUG: 435263